<resources>
    <string name="app_name">Office Hour 125</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_queue">Queue</string>
    <string name="menu_forecast">TA Forecast</string>
    <string name="menu_status">CA Forecast</string>
    <string name="menu_fun">Fun</string>
    <string name="menu_send">Under Development</string>

    <string name="queue_request">Queue Request</string>
    <string name="ta_reserve">TA Reserve</string>
    <string name="staff_portal">Staff Portal</string>
    <string name="com_nav_group">Stress Go Away</string>
    <string name="here">I\'m at Office Hour</string>

    <string name="geoff_oh">Geoff\'s Office Hour: Wednesday and Friday 1\-3pm</string>
    <string name="total_student">Total Student Number: </string>
    <string name="total_staff">Total CA/TA Number: </string>
    <string name="ca_count">CA: %1$d</string>
    <string name="ta_count">TA: %1$d</string>
    <string name="calendar_url">https://bit.ly/350L3nD</string>
    <string name="transformer_url">https://talktotransformer.com/</string>

    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>

    <string name="task">Tasks</string>

    <string name="fake_name_api">http://svc.webservius.com/v1/CorbanWork/fakename</string>

    <string name="notification_channel_id">100</string>
    <string name="notification_channel_name">newStudentInQueue</string>
    <string name="notification_description">Sent when a new student enters queue</string>
    
    <string-array name="dummy_name">
        <item>Denise G. Sanchez</item>
        <item>Deborah C. Nadeau</item>
        <item>Angela J. Howard</item>
        <item>Erica D. Burgoyne</item>
        <item>Theresa G. Davis</item>
        <item>Mary E. Lightfoot</item>
        <item>Jason S. Lewis</item>
        <item>Elmer T. Lewis</item>
        <item>Kenneth T. Franklin</item>
        <item>Cathy G. Schmidt</item>
        <item>Frances G. Cronin</item>
    </string-array>

</resources>
