<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/homeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/geoffOfficeHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/geoff_oh" />

        <LinearLayout
            android:id="@+id/student"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalStudent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total_student" />

            <TextView
                android:id="@+id/studentCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/totalStaff"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/total_staff" />

            <TextView
                android:id="@+id/caCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="CA: 0" />

            <TextView
                android:id="@+id/taCount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="TA:" />
        </LinearLayout>

        <Button
            android:id="@+id/here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/here" />

        <Button
            android:id="@+id/queueRequestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/queue_request" />

        <Button
            android:id="@+id/taReserveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ta_reserve"
            android:visibility="gone" />

        <Button
            android:id="@+id/staffPortal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/staff_portal"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>